adjust interface, add city_id etc.
